--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
 <table cellspacing="20">
   <tr>
-    <td><img src="Prathamesh Pic Circles.png" alt="Prathamesh Baisware Profile Picture" height="230"></td>
+    <td><img src="https://media-exp1.licdn.com/dms/image/C5603AQHGoPlTr_oLHw/profile-displayphoto-shrink_400_400/0/1602430779271?e=1629331200&v=beta&t=LSGluelaIqZDNNAvbeyD6sgKHEBlwM210O5BR6YClwA" alt="Prathamesh Baisware Profile Picture" height="230"></td>
     <td>
 
       <body>
