--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
 <table cellspacing="20">
   <tr>
-    <td><img src="https://media-exp1.licdn.com/dms/image/C5603AQHGoPlTr_oLHw/profile-displayphoto-shrink_400_400/0/1602430779271?e=1629331200&v=beta&t=LSGluelaIqZDNNAvbeyD6sgKHEBlwM210O5BR6YClwA" alt="Prathamesh Baisware Profile Picture" height="230"></td>
+    <td><img src="https://scontent.fpnq1-1.fna.fbcdn.net/v/t1.6435-9/123270210_361891435142587_6892443060619445757_n.jpg?_nc_cat=104&ccb=1-3&_nc_sid=09cbfe&_nc_ohc=d7p72EH4BJcAX81Eq19&_nc_ht=scontent.fpnq1-1.fna&oh=e3dec6cf52dd627235845050c8f36155&oe=60CCB323" height="230"></td>
     <td>
 
       <body>
@@ -34,7 +34,7 @@
 </p>
 
 <hr>
-<h3>Position of Responsibilities</h3>
+<h3>Clubs</h3>
 <p>
 <ul>
   <li>Nirmaan Organisation BITS Pilani</li>
