--- a/index.html
+++ b/index.html
@@ -3,12 +3,13 @@
 
 <head>
   <meta charset="utf-8">
-  <title>Prathamesh's Personal Site</title>
+  <title>Prathamesh's Personal Site❤️</title>
 </head>
+<link rel="stylesheet" href="css/styles.css">
 
 <table cellspacing="20">
   <tr>
-    <td><img src="https://scontent.fpnq1-1.fna.fbcdn.net/v/t1.6435-9/123270210_361891435142587_6892443060619445757_n.jpg?_nc_cat=104&ccb=1-3&_nc_sid=09cbfe&_nc_ohc=d7p72EH4BJcAX81Eq19&_nc_ht=scontent.fpnq1-1.fna&oh=e3dec6cf52dd627235845050c8f36155&oe=60CCB323" height="230"></td>
+    <td><img src="images/Prathamesh Pic Circles.png" alt="Prathamesh Baisware Profile Picture" height="230"></td>
     <td>
 
       <body>
@@ -16,7 +17,7 @@
         <p>
           CFO at <strong><a href="https://www.ikr-fs.org/">Inspired Karters FS</a></strong>
           |
-          Education Head at <strong>Nirmaan Organisation</strong>
+          Education Head at <strong><a href="https://nirmaan.org/">Nirmaan Organisation BITS Pilani</a></strong>
         </p>
     </td>
   </tr>
@@ -26,7 +27,7 @@
 <hr />
 <h3>Education</h3>
 <p>
-  <strong>Birla Institute of Science and Technology Pilani</strong>
+  <strong><a href="https://www.bits-pilani.ac.in/">Birla Institute of Science and Technology Pilani</a></strong>
   <br>
   Dinanath High School and Junior College, Dhantoli, Nagpur
   <br>
@@ -34,14 +35,14 @@
 </p>
 
 <hr>
-<h3>Clubs</h3>
+<h3>Position of Responsibilities</h3>
 <p>
 <ul>
   <li>Nirmaan Organisation BITS Pilani</li>
-  <li><a href="https://www.ikr-fs.org/">Inspired Karters FS BITS Pilani</a></li>
-  <li>Economics and Finance Association BITS Pilani</li>
-  <li>Maharashtra Mandal BITS Pilani</li>
-  <li>PIED Society BITS Pilani</li>
+  <li>Inspired Karters FS BITS Pilani</li>
+  <li><a href="https://efa-bitspilani.web.app/">Economics and Finance Association BITS Pilani</a></li>
+  <li><a href="https://www.facebook.com/maharashtramandalpilani">Maharashtra Mandal BITS Pilani</a></li>
+  <li><a href="http://www.piedsociety.org">PIED Society BITS Pilani</a></li>
 </ul>
 </p>
 <hr>
