--- a/contact.html
+++ b/contact.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8">
     <title></title>
   </head>
+  <link rel="stylesheet" href="css/styles.css">
   <body>
     <h3>Contact Me</h3>
     <p>
@@ -12,6 +13,7 @@
       Mail - <a href="mailto:pajaybaisware@gmail.com">Personal</a> | <a href="mailto:f20190570@pilani.bits-pilani.ac.in">Official</a>
     </p>
 <br>
+<hr>
 <h3>Get in Touch!!</h3>
 <br>
 <form action="mailto:pajaybaisware@gmail.com" method="post"enctype="text/plain">
