--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
 <table cellspacing="20">
   <tr>
-    <td><img src="images/Prathamesh Pic Circles.png" alt="Prathamesh Baisware Profile Picture" height="230"></td>
+    <td><img src="Prathamesh Pic Circles.png" alt="Prathamesh Baisware Profile Picture" height="230"></td>
     <td>
 
       <body>
