--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="utf-8">
-  <title>Prathamesh's Personal Site❤️</title>
+  <title>Prathamesh's Personal Site</title>
 </head>
 <link rel="stylesheet" href="styles.css">
 
