--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 </p>
 
 <hr>
-<h3>Position of Responsibilities</h3>
+<h3>Clubs and Departments</h3>
 <p>
 <ul>
   <li>Nirmaan Organisation BITS Pilani</li>
