--- a/contact.html
+++ b/contact.html
@@ -33,6 +33,6 @@
   <input type="submit">
 </form>
     <br>
-    <a href="index.html">Back</a>
+    <a href="index.html">Return to Main Page</a>
   </body>
   </html>
